Fixed hover flickering on a (depending on border bottom being none)

--- a/core-bc/modules/client/src/assets/scss/atoms/_link.scss
+++ b/core-bc/modules/client/src/assets/scss/atoms/_link.scss
@@ -2,3 +2,7 @@ a.tooltip-icon {
   border-bottom: none;
   display: inline-block;
 }
+
+a:hover {
+  border-bottom: 1px solid transparent;
+}
